--- a/index.html
+++ b/index.html
@@ -3,77 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Terms and Conditions</title>
 </head>
 <body>
-
-<h1>Introduction</h1>
-<p><em>[Your App Name]</em> ("the App") is committed to protecting the privacy of its users. This Privacy Policy explains how we collect, use, share, and protect your personal information. Please read it carefully to understand our practices.</p>
-
-<h2>Scope</h2>
-<p>This Privacy Policy applies to all users of the App. By using the App, you consent to the collection, use, and disclosure of your personal information as described in this Privacy Policy.</p>
-
-<h2>1. Adult Betting Only</h2>
-<p>The App is strictly for individuals who are of legal gambling age in their jurisdiction. We verify the age of users during the registration process. We do not knowingly collect any information from anyone under the legal gambling age. If you are under the legal age, please do not use the App.</p>
-
-<h2>2. Fair Betting Policy</h2>
-<p>We are dedicated to providing a fair and transparent betting experience for all users. Our systems are designed to prevent any fraudulent or manipulative activity. We reserve the right to investigate any suspicious activity and take appropriate action, which may include suspending or terminating accounts.</p>
-
-<h2>3. Limited Betting Policy</h2>
-<p>We encourage responsible gambling and have implemented measures to help users manage their betting activity. Users can set limits on the amounts they can wager within specified timeframes. We provide resources and support links for users seeking help with problem gambling.</p>
-
-<h2>4. Limited Access</h2>
-<p>To promote responsible use, you can set a limit on the amount of time you spend on the app. After the chosen time limit expires, the app will be temporarily inaccessible.</p>
-
-<h2>Information We Collect</h2>
-<p>We may collect the following types of information:</p>
-<ul>
-    <li>Personal Information: Name, contact details, date of birth, government-issued identification, location data.</li>
-    <li>Financial Information: Payment information (credit/debit card or other payment method), betting history.</li>
-    <li>Technical Information: IP Address, device type, operating system, browser information, usage patterns.</li>
-</ul>
-
-<h2>How We Use Your Information</h2>
-<ul>
-    <li>To provide betting services: Processing bets, managing your account, and verifying your identity.</li>
-    <li>To improve the App: Analyzing usage patterns to improve our functionalities and services.</li>
-    <li>To communicate with you: Providing customer support, updates on the App, and promotional offers (with your consent).</li>
-    <li>To comply with legal obligations: Meeting regulatory requirements and preventing fraud.</li>
-</ul>
-
-<h2>Sharing Your Information</h2>
-<p>We may share your information in limited circumstances:</p>
-<ul>
-    <li>Service Providers: With trusted third-parties necessary to operate the App (e.g., payment processors, identity verification services).</li>
-    <li>Legal Compliance: If required by law, court order, or other legal processes.</li>
-    <li>Mergers/Acquisitions: With another entity as part of a business reorganization.</li>
-</ul>
-
-<h2>Security of Your Information</h2>
-<p>We implement appropriate security measures that are technical, administrative, and physical to help protect your information from unauthorized access, use, or disclosure.</p>
-
-<h2>Data Retention</h2>
-<p>We retain your information for as long as necessary to fulfill the purposes outlined in this Privacy Policy or as required by law.</p>
-
-<h2>Your Rights</h2>
-<p>Depending on your jurisdiction, you may have the right to:</p>
-<ul>
-    <li>Access and update your personal information.</li>
-    <li>Withdraw your consent to the processing of your personal information.</li>
-    <li>Request deletion or restriction of your information.</li>
-</ul>
-
-<h2>Changes to This Privacy Policy</h2>
-<p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy on the App.</p>
-
-<h2>Contact Us</h2>
-<p>If you have any questions, please contact us at <a href="mailto: [Your Support Email]">[Your Support Email]</a>.</p>
-
-<p><strong>Important Notes:</strong></p>
-<ul>
-    <li>Tailor the specifics of these policies to the exact features of your app.</li>
-    <li>Ensure compliance with local and international data protection laws, such as GDPR if applicable.</li>
-</ul>
-
+    <ol>
+        <li><strong>InforebornNew</strong> is for <strong>Fun Play/Fantasy/Entertainment Only</strong>. No Betting or Real Money involved</li>
+        <li><strong>Enjoyments Place or Not No Claim</strong> in any circumstances</li>
+        <li><strong>Cheating And Un-Fair Rate Enjoyments</strong> Cancelled OR Corrected Even After Setteling.</li>
+        <li><strong>Over Balance and Over Limit Enjoyments</strong> Deleted.</li>
+        <li><strong>Cricket Max Back Price</strong> is <strong>100</strong>. All Others Games its <strong>27</strong>.</li>
+        <li>In Race <strong>Dead-Hit Rule</strong> Apply as on BF.</li>
+        <li><strong>No Deduction</strong> In Race.</li>
+        <li>Local Fantasy On <strong>Haar Jeet</strong> Basis.</li>
+        <li>If Fantasy Stuck and <strong>Unfair Rate Enjoyments</strong> made. All will be deleted</li>
+        <li>If Match <strong>Tie/No Result</strong> all completed Sessions Settled and Un-Completed Sessions Cancelled</li>
+        <li>In Test Overs Fantasy if All Team Out next Team play remaining Full Over, running overs balls not counted.</li>
+        <li>If you Not Accept any clause of this Agreement do Not place any Enjoyment.</li>
+        <li><strong>Administration Decision</strong> Is Final And no Claim on it.</li>
+        <li><strong>InfoRebornNew</strong> is solely responsible for this App. No liability to <strong>Apple</strong> or any others.</li>
+    </ol>
 </body>
 </html>
