--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>InfoRebornNew Privacy Policy</title>
 </head>
 <body>
-    <ol>
-        <li><strong>InforebornNew</strong> is for <strong>Fun Play/Fantasy/Entertainment Only</strong>. No Betting or Real Money involved</li>
-        <li><strong>Enjoyments Place or Not No Claim</strong> in any circumstances</li>
-        <li><strong>Cheating And Un-Fair Rate Enjoyments</strong> Cancelled OR Corrected Even After Setteling.</li>
-        <li><strong>Over Balance and Over Limit Enjoyments</strong> Deleted.</li>
-        <li><strong>Cricket Max Back Price</strong> is <strong>100</strong>. All Others Games its <strong>27</strong>.</li>
-        <li>In Race <strong>Dead-Hit Rule</strong> Apply as on BF.</li>
-        <li><strong>No Deduction</strong> In Race.</li>
-        <li>Local Fantasy On <strong>Haar Jeet</strong> Basis.</li>
-        <li>If Fantasy Stuck and <strong>Unfair Rate Enjoyments</strong> made. All will be deleted</li>
-        <li>If Match <strong>Tie/No Result</strong> all completed Sessions Settled and Un-Completed Sessions Cancelled</li>
-        <li>In Test Overs Fantasy if All Team Out next Team play remaining Full Over, running overs balls not counted.</li>
-        <li>If you Not Accept any clause of this Agreement do Not place any Enjoyment.</li>
-        <li><strong>Administration Decision</strong> Is Final And no Claim on it.</li>
-        <li><strong>InfoRebornNew</strong> is solely responsible for this App. No liability to <strong>Apple</strong> or any others.</li>
-    </ol>
+    <h1>Privacy Policy</h1>
+    <p>Welcome to InfoRebornNew! Please carefully review this Privacy Policy before utilizing our services. InfoRebornNew is designed for recreational play, fantasy, and entertainment purposes exclusively. There is absolutely no involvement of betting or real money transactions within our platform.</p>
+
+    <p>By accessing and using InfoRebornNew, you explicitly acknowledge and agree that it is intended for entertainment purposes only. Under no circumstances can you assert any claims regarding your experiences on the platform.</p>
+
+    <p>We are committed to maintaining a fair and transparent environment. Any instances of cheating or unfair rate enjoyments will be promptly investigated and appropriate actions will be taken, including cancellation or correction of transactions, even after settlement. Furthermore, enjoyments exceeding specified limits or exhibiting overbalance will be promptly deleted.</p>
+
+    <p>It is important to note that the maximum back price for Cricket is <strong>100</strong>, while for all other games, it is <strong>27</strong>. In races, the Dead-Hit rule applies as on BF, with no deductions permitted.</p>
+
+    <p>Local fantasy operates on a Haar Jeet (win-loss) basis, ensuring a level playing field for all participants. Any instances of unfair rate enjoyments in fantasy scenarios will result in immediate deletion.</p>
+
+    <p>In the event of a tied match or no result, all completed sessions will be settled as per the established rules, while uncompleted sessions will be promptly cancelled.</p>
+
+    <p>For Test Overs Fantasy, in the event that all teams are out, the next team will play the remaining full over, with running overs balls not counted towards the total.</p>
+
+    <p>If you disagree with any clause of this agreement, it is imperative that you refrain from placing any enjoyments on the platform.</p>
+
+    <p>Please be advised that administrative decisions made by InfoRebornNew are final and binding, with no recourse for claims against them.</p>
+
+    <p>InfoRebornNew assumes sole responsibility for this application, and as such, no liability is attributed to Apple or any other parties involved.</p>
+
+    <p>Thank you for choosing InfoRebornNew for your recreational entertainment needs!</p>
 </body>
 </html>
